# yuki

./: Cargo.toml  build.rs
compute_cuda/: CMakeLists.txt
compute_cuda/include/: accelcuda.h
compute_cuda/kernels/: test.cu
compute_cuda/src/: accelcuda.cu  accelcuda.h
src/: accelcuda.rs  main.rs
